[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uniswap-smart-path"
version = "0.3.0"
authors = [
  { name="Elnaril", email="elnaril_dev@caramail.com" },
]
description = "Find the path from v2 and v3 pools to swap with the best price"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
license = {text = "MIT License"}
dependencies = [
    "web3>=6.0.0,<8.0.0",
    "uniswap-universal-router-decoder>=v0.8.0",
    "credit-rate-limit>=0.2.0,<1.0.0"
]
keywords = ["blockchain", "ethereum", "uniswap", "exchange", "dex", "universal router", "swap", "path", "route", "pools"]

[tool.setuptools]
packages = ["uniswap_smart_path"]

[project.urls]
"Homepage" = "https://github.com/Elnaril/uniswap-smart-path"
"Bug Tracker" = "https://github.com/Elnaril/uniswap-smart-path/issues"
"Fiverr" = "https://www.fiverr.com/freelancers/elnaril"
"Buy Me A Coffee" = "https://www.buymeacoffee.com/elnaril"
"Malt" = "https://www.malt.com/profile/elnaril"
